fouder section spacing solve

--- a/src/Components/Founder/Founder.css
+++ b/src/Components/Founder/Founder.css
@@ -2,8 +2,8 @@
     background-color: white;
     width: 100%;
     /* height: 100vh; */
-    padding-top: 3rem;
-    padding-bottom: 0rem;
+    padding: 3rem 0rem;
+    /* padding-bottom: 0rem; */
 }
 
 #Founder-section hr {
@@ -125,6 +125,13 @@
         height: 80px;
         margin-top: 40px;
         margin-bottom: 30px;
+    }
+    #Founder-section {
+        background-color: white;
+        width: 100%;
+        /* height: 100vh; */
+        padding-top: 3rem;
+        padding-bottom: 0rem;
     }
 }
 
